--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi-amp",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "Loads AMP views",
   "main": "index.js",
   "scripts": {
