--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Loads AMP views",
   "main": "index.js",
   "scripts": {
-    "test": "lab -t 100 -a hoek -v",
-    "test-travis": "lab -r lcov | ./node_modules/.bin/coveralls"
+    "test": "tap test/specs.test.js --cov"
   },
   "keywords": [
     "hapi",
@@ -15,15 +14,14 @@
   "author": "First+Third",
   "license": "MIT",
   "devDependencies": {
-    "coveralls": "^2.11.6",
-    "eslint": "^3.9.1",
-    "eslint-config-firstandthird": "^3.2.0",
-    "eslint-plugin-import": "^2.1.0",
-    "handlebars": "^4.0.5",
-    "hapi": "^16.0.2",
-    "hoek": "^4.1.0",
-    "lab": "^11.2.1",
-    "vision": "^4.0.1"
+    "coveralls": "^3.0.0",
+    "eslint": "^4.18.1",
+    "eslint-config-firstandthird": "^4.3.0",
+    "eslint-plugin-import": "^2.9.0",
+    "handlebars": "^4.0.11",
+    "hapi": "^17.2.0",
+    "tap": "^11.1.1",
+    "vision": "^5.3.1"
   },
   "dependencies": {
     "async": "^2.1.4"
