--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi-amp",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0",
   "description": "Loads AMP views",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,5 @@
     "tap": "^11.1.1",
     "vision": "^5.3.1"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
